--- a/_posts/2021-02-07-Biscotti.md
+++ b/_posts/2021-02-07-Biscotti.md
@@ -2,13 +2,14 @@
 layout: post
 title: Biscotti
 date: 2021-02-07 11:46:20 +0000
-description: Biscotti recipe. # Add post description (optional)
+description: The perfect accompaniment to an afternoon coffee. # Add post description (optional)
 img: post-1-biscotti.jpg # Add image post (optional)
-tags: [Biscotti, biscuits]
+tags: [biscotti, biscuits, chocolate, nuts]
 author: Victoria # Add name author (optional)
 ---
-Ingredients:
 
+Ingredients:
+===
 252g plain flour
 
 50g cocoa powder 
@@ -28,6 +29,7 @@ Ingredients:
 1tbsp milk, for glaze
 
 Method:
+===
 1. Preheat oven to 230 C. Add all ingredients minus the pistachios to a large bowl in a stand mixer and beat to form a smooth dough. Alternatively mix with a wooden spoon.
 2. Using your hands, knead the pistachios into the dough.
 3. tip the dough onto a floured work surface, and divide into 4 pieces. 
